--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
 	androidTestImplementation 'com.android.support.test:runner:0.5'
 	androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 
-	compile 'com.squareup.retrofit2:retrofit:2.3.0'
-	compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+	implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
